<resources>
    <string name="app_name">WoLiegtWas</string>
    <string name="highscore">Highscores</string>
    <string name="highscoreAdd">Highscore eintragen</string>
    <string name="back">Zurück</string>
    <string name="share">Teilen</string>
    <string name="button_Play">Play!</string>
    <string name="button_Help">Help!</string>
    <string name="button_HighScore">High Score</string>
    <string name="checkbox_BackGround_Music">Music Off</string>
</resources>
