<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="de.gidf.woliegtwas.Highscore_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textHighHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/highscore"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textHighList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textHighHead"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="hier könnte dein Highscore stehen" />

        <Button
            android:id="@+id/ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textHighList"
            android:layout_toLeftOf="@+id/centerPoint"
            android:layout_toStartOf="@+id/centerPoint"
            android:onClick="onClickBackToMain"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/centerPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textHighList"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="50dp"
            android:text=""/>

        <Button
            android:id="@+id/ButtonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textHighList"
            android:layout_toRightOf="@id/centerPoint"
            android:onClick="onClickShareIt"
            android:text="@string/share"
            android:textColor="@color/black" />

    </RelativeLayout>
</ScrollView>

